[package]
name = "VST"
version = "0.1.0"
edition = "2021"
authors = ["Romain Spychala <spyr.dev@proton.me>"]
license = "GPL-3.0-or-later"
homepage = "https://spyr.dev"
description = "The power of music generation inside your DAW"

[lib]
crate-type = ["cdylib", "lib"]


[dependencies]

reqwest = { version = "0.12.12", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dirs = "4.0.0"

nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
    "assert_process_allocs",
    "standalone",
] }

nih_plug_iced = { git = "https://github.com/robbert-vdh/nih-plug.git" }
open = "5.0.0"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
